# task-analizer

./: pyproject.toml
.dvc/: config
data/initial_data/: .gitignore  mongodump-JiraRepos.archive.dvc
data/prepared_data/: .gitignore  stories_data.csv.dvc
src/: tmp.py
src/data/: Makefile  download_data.sh  prepare_data.py
src/notebooks/: data_convert.ipynb  get_data.ipynb
