[tool.poetry]
name = "task-analizer"
version = "0.1.0"
description = ""
authors = ["Egor Kataev <Lavabar1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = "^3.48.4"
pymongo = "^4.6.2"
pandas = "^2.2.1"
dvclive = "^3.45.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
